--- a/Resources/i18n/zh.json
+++ b/Resources/i18n/zh.json
@@ -1,8 +1,7 @@
 {
 	"main":{
-		"searchHint":"尋找皮膚...",
 		"skinList":"皮膚清單",
-		"addSkin":"添加皮膚",
+		"addSkin":"新增皮膚",
 		"editSettings":"編輯設定",
 		"skinDetails":{
 			"title":"皮膚細節",
@@ -12,16 +11,18 @@
 			"close":"關閉"
 		},
 		"noSelectedSkin":"沒有選取皮膚",
-		"noContent":{
-			"title":"未添加皮膚",
-			"help":"按 “+” 以添加皮膚"
+		"skinDelete":{
+			"title":"確認刪除",
+			"message":"確定要刪除”%s“嗎？",
+			"cancel":"不 ！",
+			"okay":"是的！"
 		},
-		"skins":"%s 皮膚",
 		"progressBar":{
 			"login":"登入中...",
 			"upload":"正上載皮膚...",
 			"loginFail":"登入失敗",
 			"uploadFail":"上載失敗",
+			"challengeFail":"任務失敗",
 			"success":"上載成功！"
 		},
 		"skinUpload":{
@@ -35,7 +36,8 @@
 				"title":"上載錯誤",
 				"login":"無法登入 minecraft.net，請檢查設定中的用戶名及密碼",
 				"server":"無法連接到 minecraft.net，該網站可能已關閉。\n請查看 http:\/\/help.mojang.com 並稍后重試",
-				"upload":"無法上載皮膚到 minecraft.net，請稍后重試"
+				"upload":"無法上載皮膚到 minecraft.net，請稍后重試",
+				"challenge":"您需要回答安全問題以登入帳戶，但糟糕的是我們無法載入題目。請檢查網絡連線後再試。"
 			}
 		}
 	},
@@ -56,11 +58,9 @@
 			"name":"皮膚名稱",
 			"nameHint":"我超棒的皮膚",
 			"description":"描述",
-			"error":{
-				"name":"請為皮膚取名"
-			},
 			"method":{
 				"title":"添加皮膚為...",
+				"search":"By searching the Web",
 				"pseudo":"從現有的使用者",
 				"url":"從 URL",
 				"cancel":"取消"
@@ -69,8 +69,19 @@
 		"urlSelect":{
 			"urlTitle":"輸入\/貼上 皮膚的URL（需為PNG檔）：",
 			"pseudoTitle":"輸入 Minecraft 用戶名（區分大小寫）：",
-			"blankField":"必須輸入資料",
 			"invalidUrl":"URL無效（必需為PNG檔）"
+		},
+		"search":{
+			"select":"Select this skin",
+			"searchHint":"Search on MC Network...",
+			"indicator":{
+				"searchResults":"Search Results for: %s",
+				"noResults":"No results for: %s",
+				"random":"Random Skins"
+			},
+			"error":{
+				"network":"Couldn't load your search results. Check your connexion, and retry later."
+			}
 		},
 		"process":{
 			"title":"處理中...",
@@ -90,6 +101,13 @@
 					"cancel":"取消",
 					"ok":"繼續"
 				}
+			},
+			"challenge":{
+				"title":"身份確認",
+				"help":"您正在嘗試從不同地方登入Mojang戶口，因此需要回答這問題。\n\n若忘記了答案，您可以重新開啓此視窗以回答其他問題。（它們是隨機的）\n\n如果您真的不懂答案，請到 help.mojang.com 跟隨指示重置您的問題。",
+				"cancel":"取消",
+				"continue":"繼續",
+				"hint":"回答"
 			}
 		},
 		"next":"下一步"
